# humenv

./: .gitignore  CONTRIBUTING.md  README.md  pyproject.toml  tutorial.ipynb
.github/workflows/: tests.yml
data_preparation/: README.md  goal_pose_selection.py  motion_name_mapper.json  phc_patch.patch  preprocess_dataset.sh  process_amass.py  smplsim_patch.patch
data_preparation/test_train_split/: 0-ACCAD_test_0.1.txt  0-ACCAD_train_0.1.txt  0-BMLhandball_test_0.1.txt  0-BMLhandball_train_0.1.txt  0-BMLmovi_test_0.1.txt  0-BMLmovi_train_0.1.txt  0-BioMotionLab_test_0.1.txt  0-BioMotionLab_train_0.1.txt  0-CMU_test_0.1.txt  0-CMU_train_0.1.txt  0-DFaust_test_0.1.txt  0-DFaust_train_0.1.txt  0-DanceDB_test_0.1.txt  0-DanceDB_train_0.1.txt  0-EKUT_test_0.1.txt  0-EKUT_train_0.1.txt  0-Eyes_test_0.1.txt  0-Eyes_train_0.1.txt  0-HumanEva_test_0.1.txt  0-HumanEva_train_0.1.txt  0-KIT_test_0.1.txt  0-KIT_train_0.1.txt  0-MPI_test_0.1.txt  0-MPI_train_0.1.txt  0-SFU_test_0.1.txt  0-SFU_train_0.1.txt  0-TotalCapture_test_0.1.txt  0-TotalCapture_train_0.1.txt  0-Transitions_test_0.1.txt  0-Transitions_train_0.1.txt  CMU_small1_test_0.1.txt  CMU_small1_train_0.1.txt  large1_small1_test_0.1.txt  large1_small1_train_0.1.txt
humenv/: __init__.py  env.py  reset.py  rewards.py  utils.py
humenv/assets/: robot.xml  robot_unbalance.xml
humenv/bench/: __init__.py  goal_evaluation.py  reward_evaluation.py  tracking_evaluation.py
humenv/bench/gym_utils/: episodes.py  (+1 more)
humenv/misc/: motionlib.py
tests/: test_collect_episode.py  test_humenv.py  test_register.py  test_vectorized.py
(+2 files in other folders)
