[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "humenv"
description = "Humanoid Physics Simulator"
requires-python = ">=3.10"
license = {text = "CC BY-NC 4.0"}
dynamic = ["version"]
classifiers = [
    "Development Status :: 1 - Planning",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "Natural Language :: English",
    "License :: CC BY-NC 4.0",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering",
]
dependencies = [
    "absl-py",
    "numpy>=1.24",
    "gymnasium>=0.26",
    "mujoco>=3.2.3",
    "dm_control>=1.0.24",
    "h5py>=3.11.0",
    "packaging",
]

[project.optional-dependencies]
bench = [
    "torch>=2",
    "tqdm>4.66",
    "pot>0.9",
]

[tool.setuptools.dynamic]
version = {attr = "humenv.__version__"}

[project.urls]
Homepage = "https://github.com/facebookresearch/humenv"

[tool.setuptools]
include-package-data = true

[tool.setuptools.package-data]
humenv = ["assets/*.xml", "bench/assets/*.json", "bench/assets/*.txt"]

[tool.setuptools.packages.find]
include = ["humenv*"]

[tool.ruff]
line-length = 140
